// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TeamAvatars render() renders with collapsed avatar count if > 5 users 1`] = `
<TeamAvatars
  members={
    Array [
      Object {
        "email": "foo@example.com",
        "id": "1",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "2",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "3",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "4",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "5",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "6",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarList>
    <Component
      className="css-8ozgf8-AvatarList css-brbu1y0"
    >
      <Flex
        className="css-8ozgf8-AvatarList css-brbu1y0"
        direction="row-reverse"
      >
        <Base
          className="css-brbu1y0 css-15xngiq"
          direction="row-reverse"
        >
          <div
            className="css-brbu1y0 css-15xngiq"
            is={null}
          >
            <Avatar
              hasTooltip={false}
              key="1"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "1",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "1",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <Avatar
              hasTooltip={false}
              key="2"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "2",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "2",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <Avatar
              hasTooltip={false}
              key="3"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "3",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "3",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <Avatar
              hasTooltip={false}
              key="4"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "4",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "4",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <Avatar
              hasTooltip={false}
              key="5"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "5",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "5",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <CollapsedMembers>
              <div
                className="css-1c7e5kj-CollapsedMembers css-brbu1y1"
              >
                1
              </div>
            </CollapsedMembers>
          </div>
        </Base>
      </Flex>
    </Component>
  </AvatarList>
</TeamAvatars>
`;

exports[`TeamAvatars render() renders with user avatars 1`] = `
<TeamAvatars
  members={
    Array [
      Object {
        "email": "foo@example.com",
        "id": "1",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
      Object {
        "email": "foo@example.com",
        "id": "2",
        "name": "Foo Bar",
        "username": "foo@example.com",
      },
    ]
  }
>
  <AvatarList>
    <Component
      className="css-8ozgf8-AvatarList css-brbu1y0"
    >
      <Flex
        className="css-8ozgf8-AvatarList css-brbu1y0"
        direction="row-reverse"
      >
        <Base
          className="css-brbu1y0 css-15xngiq"
          direction="row-reverse"
        >
          <div
            className="css-brbu1y0 css-15xngiq"
            is={null}
          >
            <Avatar
              hasTooltip={false}
              key="1"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "1",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "1",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
            <Avatar
              hasTooltip={false}
              key="2"
              size={28}
              user={
                Object {
                  "email": "foo@example.com",
                  "id": "2",
                  "name": "Foo Bar",
                  "username": "foo@example.com",
                }
              }
            >
              <UserAvatar
                gravatar={true}
                hasTooltip={false}
                size={28}
                user={
                  Object {
                    "email": "foo@example.com",
                    "id": "2",
                    "name": "Foo Bar",
                    "username": "foo@example.com",
                  }
                }
              >
                <BaseAvatar
                  gravatar={true}
                  gravatarId="foo@example.com"
                  hasTooltip={false}
                  letterId="foo@example.com"
                  size={28}
                  style={Object {}}
                  title="Foo Bar"
                  tooltip="Foo Bar (foo@example.com)"
                  type="gravatar"
                >
                  <Tooltip
                    disabled={true}
                    title="Foo Bar (foo@example.com)"
                  >
                    <span
                      className="avatar"
                      style={
                        Object {
                          "height": "28px",
                          "width": "28px",
                        }
                      }
                    >
                      <img
                        onError={[Function]}
                        onLoad={[Function]}
                        src="undefined/avatar/b48def645758b95537d4424c84d1a9ff?d=blank&s=32"
                      />
                    </span>
                  </Tooltip>
                </BaseAvatar>
              </UserAvatar>
            </Avatar>
          </div>
        </Base>
      </Flex>
    </Component>
  </AvatarList>
</TeamAvatars>
`;
